# 42sh_42school

./: #README.md#  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  author  autotest.sh  check  check_permission  err  foo.txt  info.txt  main.c  my_tests.sh  norm_script.sh  readline  readline.c  temp_fff  test  test.txt  test1  tet  text
ft_select/: main.c
includes/: .builtin42.h.swp  buildins_list.h  builtin42.h  builtins_list.h  cd.h  exit_status.h  fc.h  ft_select.h  get_next_line.h  jobs.h  jobs.h~  libft.h  libft_42.h  parser.h  readline.h  readline_simple.h  shell42.h
includes/builtins/: alias.h  bg_fg_btins.h~  builtin42.h  builtins_list.h  cd.h  echo.h  export.h  exsign_btin.h  fc.h  hash.h  jobs_btin.h
libft42/: Makefile
libft42/arrow_functions/: ft_arrdel.c  ft_arrshift.c  ft_delelem_array.c  ft_memrealloc_array.c  ft_realloc_array.c
libft42/ft_printf/: Makefile
libft42/includes/: libft.h
libft42/list_structure/: ft_lstadd_after.c  ft_lstadd_to_end.c  ft_lstclear.c  ft_lstfree.c  ft_lstfree_after.c  ft_lstfree_current.c  ft_lstiter.c  ft_lstnew.c
libft42/malloc_functions/: ft_itoa.c  ft_ltoa_base.c  ft_makerevstr.c  ft_memalloc.c  ft_realloc.c  ft_restrsub.c  ft_strchrnew.c  ft_strdup.c  ft_strjoin.c  ft_strmap.c  ft_strmapi.c  ft_strndup.c  ft_strnew.c  ft_strnewsetchar.c  ft_strrejoin.c  ft_strremerge.c  ft_strshift.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c  ft_utoa_base.c  ft_xmalloc.c
libft42/memory_functions/: ft_memcpy.c
libft42/other_functions/: ft_atoi_base.c  ft_gnl.c  ft_issign.c  swap_chars.c  swap_ints.c
libft42/output_functions/: ft_putenendl_fd.c  ft_putnstr.c  ft_putnstr_fd.c
libft42/stack_structure/: ft_clear_stack.c  ft_init_stack.c  ft_last_stack.c  ft_pop_stack.c  ft_push_stack.c
libft42/string_functions/: ft_straddsy.c  ft_strchrcmp.c  ft_strchrdiff.c  ft_strchri.c  ft_strdel.c  ft_strlenchri.c  ft_strrchr.c  ft_strrchri.c
libft_new/: ft_issign.c  ft_realloc.c  ft_xmalloc.c  swap_chars.c  swap_ints.c
other/: Intra Projects 42sh Edit.htm  Makefilebl  block_schema_link_4edit
scripts/: checklist.sh  checklist_sasha.sh  expansion_srcipt.sh  job_control.sh  test.sh
srcs/: 42clean_all.c  42environment.c  42error_handler.c  42signals_processing.c  arrow_keys.c  blocks_start.c  brackets.c  clean_all42.c  ctrl_key.c  ctrl_ktuae.c  ctrl_kwuae.c  ctrl_tl.c  ctrl_tl_esc_t.c  ctrl_tly.c  cursor_position.c  environment42.c  error_handler42.c  esc_cursor_ccp.c  esc_t.c  esc_undo_completion_transpose.c  esc_word_proc.c  escape.c  exec.c  exec_core.c  exec_init.c  find_spec.c  ft_block.c  ft_issign.c  ft_path.c  ft_realloc.c  ft_xmalloc.c  main.c  main.c~  non_printable.c  options_42sh_42.c  options_proc42.c  parser.c  print_readline_help.c  prompts.c  quote_control.c  (+15 more)
srcs/auto_completion/: cursor_position_completion.c  output_buffer.c  start_completion.c
srcs/builtin/: .bg_fg_btin.c.swp  alias.c  bg_fg_btin.c  bumblebee.c  echo.c  exit.c  exit.c~  export.c  exsign_btin.c  fc.c  fg.c  ft_bumblebee  history.c  init_structures.c  jobs_btin.c  pwd.c  set.c  type.c  unalias.c  unset.c  usages.c
srcs/exec_old/: exec_init_old.c
srcs/jobs/: #exec_core.c#  (+18 more)
test1/: test
(+272 files in other folders)
