cmake_minimum_required(VERSION 3.15)
project(42sh_42school C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/ft_printf/includes)

add_executable(42sh_42school
    includes/ft_printf.h
    includes/get_next_line.h
    includes/libft.h
    includes/parser.h
    libft/ft_printf/includes/ft_printf.h
    libft/ft_printf/includes/get_next_line.h
    libft/ft_printf/includes/libft.h
    libft/ft_printf/srcs/char_and_nonstandard_output.c
    libft/ft_printf/srcs/float_output.c
    libft/ft_printf/srcs/ft_printf.c
    libft/ft_printf/srcs/get_float_components.c
    libft/ft_printf/srcs/get_fraction.c
    libft/ft_printf/srcs/get_integer.c
    libft/ft_printf/srcs/help_functions_for_float.c
    libft/ft_printf/srcs/help_functions_for_int.c
    libft/ft_printf/srcs/int_output.c
    libft/ft_printf/srcs/other_and_bonus.c
    libft/ft_printf/srcs/output_processing_di.c
    libft/ft_printf/srcs/output_processing_f.c
    libft/ft_printf/srcs/output_processing_uob.c
    libft/ft_printf/srcs/output_processing_x.c
    libft/ft_printf/srcs/processing_functions.c
    libft/ft_arrdel.c
    libft/ft_atoi.c
    libft/ft_bubble_sort.c
    libft/ft_bzero.c
    libft/ft_choice_sort.c
    libft/ft_insertive_sort.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_itoa.c
    libft/ft_lstadd.c
    libft/ft_lstdel.c
    libft/ft_lstdelcont.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstlast.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_lstsize.c
    libft/ft_ltoa_base.c
    libft/ft_makerevstr.c
    libft/ft_mapdel.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_memset.c
    libft/ft_nb_root.c
    libft/ft_nputstr.c
    libft/ft_printmap.c
    libft/ft_putchar.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr.c
    libft/ft_putstr_fd.c
    libft/ft_rejoin.c
    libft/ft_restrsub.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strchri.c
    libft/ft_strchrlen.c
    libft/ft_strchrnew.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlen.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strndup.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnewsetchar.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strrejoin.c
    libft/ft_strremerge.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/ft_utoa_base.c
    libft/get_next_line.c
    srcs/ft_block.c
    srcs/ft_path.c
    srcs/test_path.c)
